objects/Mentorship_Request__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mentorship Request</relationshipLabel>
        <relationshipName>Mentorship_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience_Type__c</fullName>
        <label>Experience Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Administrator</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Salesforce Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Salesforce Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Journey__c</fullName>
        <label>Journey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Fundamentals I</fullName>
                </value>
                <value>
                    <fullName>Copado Fundamentals II</fullName>
                </value>
                <value>
                    <fullName>Copado Consultant</fullName>
                </value>
                <value>
                    <fullName>Copado Administrator</fullName>
                    <isActive>false</isActive>
                    <label>Copado Administrator</label>
                </value>
                <value>
                    <fullName>Copado Developer</fullName>
                    <isActive>false</isActive>
                    <label>Copado Developer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledge_of_Salesforce__c</fullName>
        <description>Description: We would like to know what Salesforce´s features you are familiar with. (ex: Custom objects, fields, flows, process builders, profiles, permission sets, layouts, etc.)</description>
        <label>Knowledge of Salesforce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor_Reason__c</fullName>
        <label>Why would you like to be a Mentor?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_mentees__c</fullName>
        <label>Number of mentees willing to mentor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Mentee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Experience__c</fullName>
        <label>Salesforce Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 Years</fullName>
                </value>
                <value>
                    <fullName>3-5 Years</fullName>
                </value>
                <value>
                    <fullName>6-10 Years</fullName>
                </value>
                <value>
                    <fullName>Over 10 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trailblazer_profile__c</fullName>
        <label>Trailblazer profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Used_Copado_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you used copado before?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mentorship_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_would_you_like_to_get_a_Mentor__c</fullName>
        <label>Why would you like to get a Mentor?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mentorship Request</label>
    <listViews>
        <fullName>Academy_Team_Mentorship_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Academy Team</label>
        <queue>Academy_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Journey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_Mentorship_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Community</label>
        <queue>Community</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mentorship_Program_Mentorship_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Mentorship Program</label>
        <queue>Mentorship_Program</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Mentorship Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentorship Request</pluralLabel>
    <recordTypes>
        <fullName>Mentee_Request</fullName>
        <active>true</active>
        <label>Mentee Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mentor_Request</fullName>
        <active>true</active>
        <label>Mentor Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>